expected/main/core/structs/structs2a.err
ERROR: "actual/main/core/structs/structs2a.lc", line 2
struct S1/16
^
Size of z is 16 more than expected

ERROR: Aborting after previously reported error

